fix(footer): Set text footer aligned to left

--- a/Team-Ionis_Paris/footer/footerCss.css
+++ b/Team-Ionis_Paris/footer/footerCss.css
@@ -2,6 +2,7 @@
     background-color: #8d1f24;
     padding: 70px 0;
     color: white;
+    text-align: left;
 }
 
 #footer .Ionis {
